--- a/SpMVC27_Secure/src/main/webapp/WEB-INF/web.xml
+++ b/SpMVC27_Secure/src/main/webapp/WEB-INF/web.xml
@@ -6,10 +6,15 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/*-context.xml</param-value>
+		<param-value>
+			/WEB-INF/spring/db-auth-context.xml
+			/WEB-INF/spring/security-context.xml
+			/WEB-INF/spring/mybatis-context.xml
+			/WEB-INF/spring/root-context.xml
+		</param-value>
 	</context-param>
 	
-	<!-- security와 관련된 filter는 반드시 여기에 작성 -->
+	<!-- security 와 관련된 filter는 반드시 여기에 작성 -->
 	<!-- 한글 encoding과 관련된 filter는 반드시 security 보다 앞에 위치 -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
@@ -21,7 +26,6 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>*</url-pattern>
 	</filter-mapping>
-	
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
